# omegaCalculus

./: README.md  pyproject.toml
examples/: basic_usage.py
omega_calculus/: __init__.py  branches.py  context.py  degree.py  expr.py  generic.py  laws.py  pointwise.py  rpn.py  trace.py
tests/: test_branches.py  test_degree.py  test_generic.py  test_laws.py  test_pointwise.py  test_powers.py  test_rpn.py  test_trace.py
