[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omega-calculus"
version = "0.1.0"
description = "Reference implementation for Omega-calculus scale-promoting division"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Artur Chudzik" }]
dependencies = ["sympy>=1.12"]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
